--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
       "name"                        : "ee-formdata-reader"
     , "description"                 : "reads formdata from requests"
-    , "version"                     : "0.1.8"
+    , "version"                     : "0.1.9"
     , "homepage"                    : "https://github.com/eventEmitter/ee-formdata-reader"
     , "author"                      : "Michael van der Weg <michael@eventemitter.com> (http://eventemitter.com/)" 
     , "licence"                     : "MIT"
@@ -17,20 +17,20 @@
         "url"                       : "https://github.com/eventEmitter/ee-formdata-reader/issues"
     }
     , "dependencies": {
-          "ee-class"                : ">=0.1.3"
-        , "ee-log"                  : "*"
-        , "ee-error"                : "*"
-        , "ee-event-emitter"        : "*"
-        , "ee-types"                : "*"
-        , "ee-machine-id"           : "*"
-        , "ee-mime-decoder"         : "*"
-        , "ee-stream-url-decoder"   : "*"
-        , "ee-stream-collector"     : "*"
+          "ee-class"                : "0.2.x"
+        , "ee-log"                  : "0.2.x"
+        , "ee-error"                : "0.1.x"
+        , "ee-event-emitter"        : "0.1.x"
+        , "ee-types"                : "0.1.x"
+        , "ee-machine-id"           : "0.1.x"
+        , "ee-mime-decoder"         : "0.1.x"
+        , "ee-stream-url-decoder"   : "0.1.x"
+        , "ee-stream-collector"     : "0.1.x"
     } 
     , "devDependencies": {
-          "mocha"                   : "*"
-        , "ee-travis"               : "*"
-        , "ee-project"              : "*"
+          "mocha"                   : "1.17.x"
+        , "ee-travis"               : "0.1.x"
+        , "ee-project"              : "0.2.x"
     }
     , "optionalDependencies": {}
     , "keywords"                    : ["mime", "mime-message", "multipart/form-data"]
